# repo-grading-assistant

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  QUICKSTART.md  README.md  SECURITY.md  VERSION.py  git_push.sh  grade_assignments.py  pyproject.toml  pytest.ini  requirements.txt  tree.sh
.github/workflows/: ci.yml
configs/: grading_config_example.json  grading_config_strict.json  homework02_config.json  homework03_config.json  homework05_config.json  homework06_config.json  homework07_config.json  homework08_config.json  homework09_config.json  homework10_config.json  lab01_config.json  lab02_config.json  lab04_config.json
docs/: ADVANCED_USAGE.md  ARCHITECTURE.md  EXAMPLES_WALKTHROUGH.md  How to set up GitHub and directories.docx  INSTALLATION_TROUBLESHOOTING.md  OPENAI_SETUP_GUIDE.md  bug_report.md  documentation_fixes_tracking.md  feature_request.md  pull_request_template.md  release_checklist.md  testing.md
docs/examples/: base_system_prompt.txt  base_system_prompt.txt_delete  grading_config_example.json  grading_key_example.txt
docs/examples/configs/: exclusions.json  global_config.json
docs/examples/grading_assignment_example/student_1/: README.md  grade_summary.txt
docs/examples/grading_assignment_example/student_1/myproject/socialproj/: asgi.py  settings.py  urls.py  wsgi.py
docs/examples/grading_assignment_example/student_1/myproject/socialprojapp/: apps.py  forms.py  models.py  views.py
docs/examples/grading_assignment_example/student_2/: README.md  grade_summary.txt
docs/examples/grading_assignment_example/student_2/myblogproject/accounts/: forms.py  urls.py  views.py
docs/examples/grading_assignment_example/student_2/myblogproject/blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
keys/: Homework02-key.txt  Homework03-key.txt  Homework05-key.txt  Homework06-key.txt  Homework07-key.txt  Homework08-key.txt  Homework09-key.txt  Homework10-key.txt  Lab01-key.txt  Lab02-key.txt  Lab04-key.txt  Lab05-key.txt  grading_key_example.txt
prompts/: base_system_prompt.txt  base_system_prompt.txt_delete
src/repo_grading_assistant/: __init__.py  _version.py  cli.py  grade_assignments.py
src/repo_grading_assistant/data/: base_system_prompt.txt
src/repogradingassist/: cli.py  grade_assignments.py
tests/: conftest.py  test_grade_assignments.py
(+28 files in other folders)
