[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-grading-assistant"
version = "1.0.4"
description = "Assistive Python CLI for instructor review and feedback on student code (human-in-the-loop)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "John Fulton"}]
dependencies = ["openai==0.28.0", "python-dotenv>=1.0.0"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
repo-grading-assistant = "repo_grading_assistant.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/professor-john-fulton/repo-grading-assistant"
Issues = "https://github.com/professor-john-fulton/repo-grading-assistant/issues"

[tool.setuptools.package-data]
repo_grading_assistant = ["data/*.txt"]
